--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,6 @@
         }
     ],
 
-    "ecsstractor_port.bem_nesting": true
+    "ecsstractor_port.bem_nesting": true,
+    "ecsstractor_port.add_comment": false
 }
